--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             </div>
         </div>
     </div>
-    <div id="projects">
-        <div class="container" style="display: none;">
+    <div id="projects" style="display: none;">
+        <div class="container">
             <h1>My Projects</h1>
             <hr>
             <p>Selected showcases of Projects i'm excited to share</p>
