--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                     <label for="amount">Donate :</label>
                     <input type="number" required step="1000" id="amount" placeholder="Amount in Naira">
                 </div>
-                <button id ="don_btn"><img src="./img/coffeebtn.jpg" alt="coffee button" onclick="makePayment()"></button>
+                <button id ="don_btn" onclick="makePayment()"><img src="./img/coffeebtn.jpg" alt="coffee button"></button>
             </form>
         </div>
-    <div id="testimonials" hidden>
+    <div id="testimonials">
         <h1>My Testimonials</h1>
         <main class="testimonial-container">
             <section class="testimonial-box">
