--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li class="currentNav"><a href="#home">Home</a></li>
+                    <li class="currentNav"><a href="#">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./projects.html">My Projects</a></li>
                     <li><a href="./contact.html">Contact</a></li>
