--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <button id ="don_btn" onclick="makePayment()"><img src="./img/coffeebtn.jpg" alt="coffee button"></button>
             </form>
         </div>
-    <div id="testimonials">
+    <div id="testimonials" hidden>
         <h1>My Testimonials</h1>
         <main class="testimonial-container">
             <section class="testimonial-box">
